--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^5",
+    "@sap/xssec": "^3.2.12",
     "express": "^4",
+    "hdb": "^0.18.3",
     "passport": "^0.5.2"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.96.2",
     "sqlite3": "^4.2.0"
+  },
+  "engines": {
+    "node": "^16"
   },
   "scripts": {
     "start": "cds run",
@@ -47,5 +52,19 @@
   "sapux": [
     "app/risks",
     "app/mitigations"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sql"
+      },
+      "uaa": {
+        "kind": "xsuaa",
+        "credentials": {}
+      }
+    },
+    "hana": {
+      "deploy-format": "hdbtable"
+    }
+  }
 }
