--- a/mta.yaml
+++ b/mta.yaml
@@ -10,6 +10,8 @@ modules:
   - name: cpapp-db
   - name: cpapp-uaa
   - name: cpapp-logs
+  - name: cpapp-connectivity
+  - name: cpapp-destination
   provides:
   - name: srv-api
     properties:
@@ -155,9 +157,13 @@ resources:
   parameters:
     service: html5-apps-repo
     service-plan: app-host
-parameters:
-  deploy_mode: html5-repo
-  enable-parallel-deployments: true
+    deploy_mode: html5-repo
+    enable-parallel-deployments: true
+- name: cpapp-connectivity
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: connectivity
+    service-plan: lite
 build-parameters:
   before-all:
   - builder: custom
