--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^5",
+    "@sap/ux-cds-odata-language-server-extension": "^1.4.7",
     "@sap/xssec": "^3.2.12",
     "express": "^4",
     "hdb": "^0.18.3",
@@ -68,15 +69,15 @@
         "model": "srv/external/API_BUSINESS_PARTNER",
         "[sandbox]": {
           "credentials": {
-              "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
-           }
-          },
+            "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
+          }
+        },
         "[production]": {
-            "credentials": {
-                "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER",
-                "destination": "cpapp-bupa"
-            }
-         }
+          "credentials": {
+            "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER",
+            "destination": "cpapp-bupa"
+          }
+        }
       }
     },
     "hana": {
