--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,44 @@ dist/
 resources/
 app/*/package-lock.json
 .env
+app/htmlApps/nsmitigations-1.0.0/Component-dbg.js
+app/htmlApps/nsmitigations-1.0.0/Component-preload.js
+app/htmlApps/nsmitigations-1.0.0/Component.js
+app/htmlApps/nsmitigations-1.0.0/index.html
+app/htmlApps/nsmitigations-1.0.0/manifest-bundle.zip
+app/htmlApps/nsmitigations-1.0.0/manifest.json
+app/htmlApps/nsmitigations-1.0.0/manifest.json.bak
+app/htmlApps/nsmitigations-1.0.0/sap-ui-cachebuster-info.json
+app/htmlApps/nsmitigations-1.0.0/xs-app.json
+app/htmlApps/nsmitigations-1.0.0/controller/App-dbg.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/App.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/BaseController-dbg.js
+app/htmlApps/nsmitigations-1.0.0/controller/BaseController.js
+app/htmlApps/nsmitigations-1.0.0/controller/ErrorHandler-dbg.js
+app/htmlApps/nsmitigations-1.0.0/controller/ErrorHandler.js
+app/htmlApps/nsmitigations-1.0.0/controller/NotFound-dbg.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/NotFound.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/Object-dbg.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/Object.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/Worklist-dbg.controller.js
+app/htmlApps/nsmitigations-1.0.0/controller/Worklist.controller.js
+app/htmlApps/nsmitigations-1.0.0/i18n/i18n.properties
+app/htmlApps/nsmitigations-1.0.0/model/formatter-dbg.js
+app/htmlApps/nsmitigations-1.0.0/model/formatter.js
+app/htmlApps/nsmitigations-1.0.0/model/models-dbg.js
+app/htmlApps/nsmitigations-1.0.0/model/models.js
+app/htmlApps/nsmitigations-1.0.0/view/App.view.xml
+app/htmlApps/nsmitigations-1.0.0/view/NotFound.view.xml
+app/htmlApps/nsmitigations-1.0.0/view/Object.view.xml
+app/htmlApps/nsmitigations-1.0.0/view/ObjectNotFound.view.xml
+app/htmlApps/nsmitigations-1.0.0/view/Worklist.view.xml
+app/htmlApps/nsrisks-1.0.0/Component-dbg.js
+app/htmlApps/nsrisks-1.0.0/Component-preload.js
+app/htmlApps/nsrisks-1.0.0/Component.js
+app/htmlApps/nsrisks-1.0.0/manifest-bundle.zip
+app/htmlApps/nsrisks-1.0.0/manifest.json
+app/htmlApps/nsrisks-1.0.0/sap-ui-cachebuster-info.json
+app/htmlApps/nsrisks-1.0.0/xs-app.json
+app/htmlApps/nsrisks-1.0.0/i18n/i18n.properties
+app/htmlApps/nsrisks-1.0.0/utils/locate-reuse-libs-dbg.js
+app/htmlApps/nsrisks-1.0.0/utils/locate-reuse-libs.js
