--- a/package.json
+++ b/package.json
@@ -1,87 +1,89 @@
 {
-  "name": "cpapp",
-  "version": "1.0.0",
-  "description": "A simple CAP project.",
-  "repository": "<Add your repository here>",
-  "license": "UNLICENSED",
-  "private": true,
-  "dependencies": {
-    "@sap/cds": "^5",
-    "@sap/ux-cds-odata-language-server-extension": "^1.4.7",
-    "@sap/xssec": "^3.2.12",
-    "express": "^4",
-    "hdb": "^0.18.3",
-    "passport": "^0.5.2"
-  },
-  "devDependencies": {
-    "@sap/ux-specification": "^1.96.2",
-    "sqlite3": "^4.2.0"
-  },
-  "engines": {
-    "node": "^16"
-  },
-  "scripts": {
-    "start": "cds run",
-    "watch-risks": "cds watch --open risks/webapp/index.html#fe-lrop-v4",
-    "watch-mitigations": "cds watch --open mitigations/webapp/index.html#fe-lrop-v4",
-    "undeploy": "cf undeploy cpapp --delete-services --delete-service-keys"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "env": {
-      "es2020": true,
-      "node": true,
-      "jest": true,
-      "mocha": true
+    "name": "cpapp",
+    "version": "1.0.0",
+    "description": "A simple CAP project.",
+    "repository": "<Add your repository here>",
+    "license": "UNLICENSED",
+    "private": true,
+    "dependencies": {
+        "@sap/cds": "^5",
+        "@sap/ux-cds-odata-language-server-extension": "^1.4.7",
+        "@sap/xssec": "^3.2.12",
+        "express": "^4",
+        "hdb": "^0.18.3",
+        "passport": "^0.5.2"
     },
-    "globals": {
-      "SELECT": true,
-      "INSERT": true,
-      "UPDATE": true,
-      "DELETE": true,
-      "CREATE": true,
-      "DROP": true,
-      "CDL": true,
-      "CQL": true,
-      "CXL": true,
-      "cds": true
+    "devDependencies": {
+        "@sap/ux-specification": "^1.96.4",
+        "sqlite3": "^4.2.0"
     },
-    "rules": {
-      "no-console": "off",
-      "require-atomic-updates": "off"
-    }
-  },
-  "sapux": [
-    "app/risks",
-    "app/mitigations"
-  ],
-  "cds": {
-    "requires": {
-      "db": {
-        "kind": "sql"
-      },
-      "uaa": {
-        "kind": "xsuaa",
-        "credentials": {}
-      },
-      "API_BUSINESS_PARTNER": {
-        "kind": "odata-v2",
-        "model": "srv/external/API_BUSINESS_PARTNER",
-        "[sandbox]": {
-          "credentials": {
-            "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
-          }
+    "engines": {
+        "node": "^16"
+    },
+    "scripts": {
+        "start": "cds run",
+        "watch-risks": "cds watch --open risks/webapp/index.html#fe-lrop-v4",
+        "watch-mitigations": "cds watch --open mitigations/webapp/index.html#fe-lrop-v4",
+        "undeploy": "cf undeploy cpapp --delete-services --delete-service-keys",
+        "watch-chargingsessions": "cds watch --open chargingsessions/webapp/index.html?sap-ui-xx-viewCache=false#fe-lrop-v4"
+    },
+    "eslintConfig": {
+        "extends": "eslint:recommended",
+        "env": {
+            "es2020": true,
+            "node": true,
+            "jest": true,
+            "mocha": true
         },
-        "[production]": {
-          "credentials": {
-            "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER",
-            "destination": "cpapp-bupa"
-          }
+        "globals": {
+            "SELECT": true,
+            "INSERT": true,
+            "UPDATE": true,
+            "DELETE": true,
+            "CREATE": true,
+            "DROP": true,
+            "CDL": true,
+            "CQL": true,
+            "CXL": true,
+            "cds": true
+        },
+        "rules": {
+            "no-console": "off",
+            "require-atomic-updates": "off"
         }
-      }
     },
-    "hana": {
-      "deploy-format": "hdbtable"
+    "sapux": [
+        "app/risks",
+        "app/mitigations",
+        "app/chargingsessions"
+    ],
+    "cds": {
+        "requires": {
+            "db": {
+                "kind": "sql"
+            },
+            "uaa": {
+                "kind": "xsuaa",
+                "credentials": {}
+            },
+            "API_BUSINESS_PARTNER": {
+                "kind": "odata-v2",
+                "model": "srv/external/API_BUSINESS_PARTNER",
+                "[sandbox]": {
+                    "credentials": {
+                        "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
+                    }
+                },
+                "[production]": {
+                    "credentials": {
+                        "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER",
+                        "destination": "cpapp-bupa"
+                    }
+                }
+            }
+        },
+        "hana": {
+            "deploy-format": "hdbtable"
+        }
     }
-  }
 }
